// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should do nothing when a test is not past its deadline 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 should grow: running \\"should grow\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ should grow: \\"should grow\\" got checked for the first time! 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉

",
]
`;

exports[`betterer should do nothing when a test is not past its deadline 2`] = `
"// BETTERER RESULTS V2.
exports[\`should grow\`] = {
  value: \`0\`
};
"
`;

exports[`betterer should mark a test as expired when is is past its deadline 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸ \\"should grow\\" has passed its deadline. 👻
🤔 should grow: running \\"should grow\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸ \\"should grow\\" has passed its deadline. 👻
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
  ▸ \\"should grow\\" has passed its deadline. 👻
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
  ▸ \\"should grow\\" has passed its deadline. 👻
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ should grow: \\"should grow\\" got checked for the first time! 🎉
  ▸ \\"should grow\\" has passed its deadline. 👻

1 test got checked. 🤔
\\"should grow\\" has passed its deadline. 👻)
1 test got checked for the first time! 🎉

",
]
`;

exports[`betterer should mark a test as expired when is is past its deadline 2`] = `
"// BETTERER RESULTS V2.
exports[\`should grow\`] = {
  value: \`0\`
};
"
`;
